# kdevelop-lang-dragonscript

./: .gitignore  Changelog  README.md  implNotes
debian/: .gitignore  changelog  control  copyright  rules  watch
src/: CMakeLists.txt  DSLanguageSupport.cpp  DSLanguageSupport.h  DSParseJob.cpp  DSParseJob.h  DSProjectSettings.cpp  DSProjectSettings.h  DSSessionSettings.cpp  DSSessionSettings.h  Highlighting.cpp  org.kde.kdev-dragonscript.metainfo.xml
src/codecompletion/: CMakeLists.txt  DSCodeCompletionCodeBody.cpp  DSCodeCompletionCodeBody.h  DSCodeCompletionCodeClass.cpp  DSCodeCompletionCodeClass.h  DSCodeCompletionContext.cpp  DSCodeCompletionContext.h  DSCodeCompletionModel.cpp  DSCodeCompletionModel.h  DSCodeCompletionWorker.cpp  DSCodeCompletionWorker.h
src/codecompletion/items/: DSCCItemFunctionCall.cpp  DSCCItemFunctionCall.h  DSCodeCompletionBaseItem.cpp  DSCodeCompletionBaseItem.h  DSCodeCompletionItem.cpp  DSCodeCompletionItem.h  DSCodeCompletionOverrideFunction.cpp  DSCodeCompletionOverrideFunction.h  notes
src/configpage/: CMakeLists.txt  ProjectConfigPage.cpp  ProjectConfigPage.h  SessionConfigPage.cpp  SessionConfigPage.h  projectConfigPage.ui  sessionConfigPage.ui
src/dslangdoc/: Enumeration.ds  int.ds
src/duchain/: CMakeLists.txt  ContextBuilder.cpp  ContextBuilder.h  DeclarationBuilder.cpp  DeclarationBuilder.h  DelayedParsing.cpp  DelayedParsing.h  ExpressionVisitor.cpp  ExpressionVisitor.h  Helpers.cpp  Helpers.h  ImportPackage.cpp  ImportPackage.h  ImportPackageDirectory.cpp  ImportPackageDirectory.h  ImportPackageDragengine.cpp  ImportPackageDragengine.h  ImportPackageLanguage.cpp  ImportPackageLanguage.h  ImportPackages.cpp  ImportPackages.h  Namespace.cpp  Namespace.h  PinNamespaceVisitor.cpp  PinNamespaceVisitor.h  TypeFinder.cpp  TypeFinder.h  UseBuilder.cpp  UseBuilder.h
src/parser/: CMakeLists.txt  DebugAst.cpp  DebugAst.h  ParseSession.cpp  ParseSession.h  dragonscript.g  dragonscript.lex
tests/: accept.ds
